# docs

./: .gitignore  404.html  fk.html  index.html  jb.html  package.json  pnpm-lock.yaml  sitemap.xml  sq.html  指南.html
api/: afd-webhook.js
assets/: 404.html-C7UV58hz.js  404.html-C9CwJPL6.js  404.html-Cf4YYYAC.js  404.html-DO1kmKTH.js  404.html-DSZjzxCG.js  404.html-DZ2v9prT.js  404.html-DxDHZc2K.js  404.html-DyL8TKXO.js  Floating-OS.html-1HJ1-koD.js  Floating-OS.html-BAOg3Lfd.js  Floating-OS.html-BGHs7PeY.js  Floating-OS.html-BZEWhF_8.js  Floating-OS.html-BbvHutNq.js  Floating-OS.html-ByyHbmJW.js  Floating-OS.html-CHlzG-nc.js  Floating-OS.html-CQI_2qHU.js  Floating-OS.html-CrA_2aGX.js  Floating-OS.html-CsqJ-2re.js  Floating-OS.html-Cy_w6aYM.js  Floating-OS.html-DCBtHXwZ.js  Floating-OS.html-DIvUhYMu.js  Floating-OS.html-Elfc1u-b.js  Floating-OS.html-bol0uSZF.js  Floating-OS.html-fiZZfl0u.js  MC-片头-尾.html-4WAK8rTO.js  MC-片头-尾.html-6Fut7dze.js  MC-片头-尾.html-BNEjxAkJ.js  MC-片头-尾.html-BauEBU-Q.js  MC-片头-尾.html-BmqQaOJ3.js  MC-片头-尾.html-BuXQaX9M.js  MC-片头-尾.html-C-UNRkct.js  MC-片头-尾.html-CF25hTEA.js  MC-片头-尾.html-Ca4Z13Bg.js  MC-片头-尾.html-Cd38bB0Y.js  MC-片头-尾.html-CjG8RwNf.js  MC-片头-尾.html-Dk_7lARa.js  MC-片头-尾.html-DuMtf9Oq.js  MC-片头-尾.html-FjEtfKMC.js  MC-片头-尾.html-Q3Jyh6jq.js  MC-片头-尾.html-Ya__rFyl.js  (+381 more)
docs/: README.md  friends.md
friends/: index.html
notes/: Floating-OS.html  MC-片头-尾.html  MC-鼠标指针.html  模板.html  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon_128x128.icns  icon_16x16.icns  icon_256x256.icns  icon_32x32.icns
src-tauri/src/: main.rs
(+177 files in other folders)
