[package]
name = "ym_docs"
version = "1.0.0"
description = "Youming 工作室的官方作品文档."
authors = ["YOU MING 柚明"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"